--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <div class="container">
       <a href="caculator.html" class="btn">计算器</a>
       <a href="etf-investment-calculator.html" class="btn">ETF 投资计算器</a>
+      <a href="5g-etf.html" class="btn">5G ETF 投资计算器</a>
     </div>
   </body>
 </html>
