--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <a href="caculator.html" class="btn">计算器</a>
       <a href="etf-investment-calculator.html" class="btn">ETF 投资计算器</a>
       <a href="5g-etf.html" class="btn">5G ETF 投资计算器</a>
+      <a href="dingtou.html" class="btn">区间定投计算器</a>
     </div>
   </body>
 </html>
